# ASpaceLocs

./: .gitignore  Dockerfile  README.md  application.py  aspace_api.py  aspace_api_alt.py  aspace_api_asnake.py  error.txt  genlabels.py  main.py  out.json  pyproject.toml  requirements.txt
templates/: container-list.html  default-with-button.html  edit-container.html  execute-move.html  index-with-toast.html  index.html  move-container.html  move.html  welcome.html
